--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@ For our example, we would write the following:<br>
 >  java -Xmx6000m -jar microTaboo.jar A B R 3 d 3;<br>
 That is, we're specifying that we would like  microTaboo to give us the k-disjoint, where k=3, of the contents in A and B  and put the result files into the subfolder R.  In other words, we would like microTaboo to give us a file containing all sequences of length W in A that are at least 3 mismatches away from anything/any sequence in B.
 <br></br>
-There you go. You’ve hopefully now run microTaboo successfully. 
+There you go. You’ve hopefully now run microTaboo successfully.
+<br></br>
+A zip file called ExampleRuns.zip is provided on the github page. Unzipping the file gives you a folder containing three subfolders
+where each subfolder contains a test case with a readme files. These are meant to be downloaded and used as a verification to see
+if microTaboo actually runs on your system. Follow the instructions in the readme files, not only do you check if everything runs
+on your machine, it also gives you some practice on microTaboo.
 </p>
 
 
