--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@ on your machine, it also gives you some practice on microTaboo.
 </p>
 
 
+
+
+hr>
+
+<h3>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
+
+<p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
+
+</p>
+
+
+
       </section>
     </div>
 
