--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <hr>
 
 <h3>
-<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use microTaboo</h3>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+How to use microTaboo to solve you k-mismatch problem</h3>
 
 <p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
 
