--- a/index.html
+++ b/index.html
@@ -82,15 +82,16 @@ if microTaboo actually runs on your system. Follow the instructions in the readm
 on your machine, it also gives you some practice on microTaboo.
 </p>
 
-
-
-
 hr>
 
 <h3>
-<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
 
-<p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
+<p>In this section, we'll show how microTaboo can be used to find all sequences of 
+length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
+find only unique sequences in a FASTA file relative to its self.
+:<br><br>
 
 </p>
 
