--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 <h3>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h3>
 
-<p>ipsum bullshit.</p>
+<p> Something something k-mismatch problem. 
+Mention also that microTaboo can also be  used to find sequences in a fasta file that only occur once. 
+Moreover if you want to find unique sequences that are not only occur once in your fasta file, but differ from any other sequence
+by a number of mismatches, then microTaboo should be your app of choice.</p>
 
 <hr>
 
