--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@ How to use microTaboo to solve you k-mismatch problem</h3>
 &gt; java -Xmx[a number]m -jar microTaboo.jar [name of folder A] [name of folder B] [name of folder R] [sequence length W] [number of mismatches k] d/i/a [number of cores] <br><br>
 
 For our example, we would write the following:<br>
-&gt;  java -Xmx6000m -jar microTaboo.jar A B R 3 d 3;<br>
-That is, we're specifying that we would like  microTaboo to give us the k-disjoint, where k=3, of the contents in A and B  and put the result files into the subfolder R.  In other words, we would like microTaboo to give us a file containing all sequences of length W in A that are at least 3 mismatches away from anything/any sequence in B.
+&gt;  java -Xmx6000m -jar microTaboo.jar A B R 20 3 d 3;<br>
+That is, we're specifying that we would like  microTaboo to give us the k-disjoint, where k=3, of the contents in A and B  and put the result files into the subfolder R.  
+In other words, we would like microTaboo to give us a file containing all sequences of length 20 in A that are at least 3 mismatches away from anything/any sequence in B.
 <br>
 There you go. You’ve hopefully now run microTaboo successfully.
 <br>
