--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ by a number of mismatches, then microTaboo should be your app of choice.</p>
 <a id="getting-started" href="#getting-started"></a>
 How to use microTaboo to solve you k-mismatch problem</h3>
 
-<p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
+<p>Below we give a step-by-step procedure of how to use microTawdwaddadaboo:<br><br>
 
 1. Create a folder/directory, you can name this folder/directory whatever you want as long as you know where it is. For the sake of example, we call our folder/directory F.<br><br>
 
