--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ do this with microTaboo.<br></br>
 Also create a third folder (R) where the result should be saved. We call these folders A, B and R for simplicity.
 <br><br>
 2. Run microTaboo from the command line by typing: <br>
-java -Xmx[#]m -jar microTaboo.jar path/A path/B path/R [#w] [#k] [d] [#cores] [m/s] <br>
--Xmx[#]m determines the maximum memory microTaboo can allocate. <br>
-The path to A, B and R can be either relative or absolute.  <br>
+java -Xmx[#]m -jar path/microTaboo.jar path/A path/B path/R [#w] [#k] [d] [#cores] [m] <br><br>
+-Xmx[#]m determines the maximum amount of memory microTaboo can allocate. <br>
+The path to microTaboo.jar, A, B and R can be either relative or absolute.  <br>
 #w stands for word length and should be a multiple of 5 and atleast 10 (i.e 10, 15, 20 etc).<br>
 #k is the mismatch threshold, can be any number greater than or equal to 0. It is recommended to not use #k greater than 5.<br>
 d means disjoint and which corresponds to unique sequences. <br>
 #cores decides how many cores microTaboo should use, minimum is 1.<br>
-#m is a flag which is necessary when running a FASTA file against itself.
+m is a flag which is necessary when running a FASTA file against itself.
 
 
 
