--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ d means disjoint and which corresponds to unique sequences. <br>
 #cores decides how many cores microTaboo should use, minimum is 1.<br>
 m is a flag which is necessary when running a FASTA file against itself. <br><br>
 
-Example:
+Example:<br>
 java -Xmx6000m -jar path/microTaboo.jar path/A path/B path/R 20 2 d 5 m <br>
 Means finding all unique sequnces within 2 mismatches of length 20 while using 5 cores and allowing microTaboo to utilize a maximum of 6GB of RAM.
 
