--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="overview" href="#overview"></a>Overview</h3>
 
-<p> Something something k-mismatch problem. 
+<p>  
+
+<br><br>Something something k-mismatch problem. 
 Mention also that microTaboo can also be  used to find sequences in a fasta file that only occur once. 
 Moreover if you want to find unique sequences that are not only occur once in your fasta file, but differ from any other sequence
 by a number of mismatches, then microTaboo should be your app of choice.</p>
@@ -95,7 +97,7 @@ How to use microTaboo to find sequences in a FASTA file that occur only once</h3
 
 <p>In this section, we'll show how microTaboo can be used to find all sequences of 
 length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
-find only unique sequences in a FASTA file relative to its self. Below is a step by step instruction on how you could
+find only unique sequences in a FASTA file relative to it self. Below are instructions on how you could
 do this with microTaboo.<br></br>
 
 1. Create two separate folders (A and B), each one containing the FASTA file(s) for the same organism of interest. 
@@ -117,7 +119,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 
 
 
-:<br><br>
+<br><br>
 
 </p>
 
