--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 
 </p>
 
+<h3>
+<a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<a id="getting-started" href="#getting-started"></a>
+How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
+<p>
+  
+  
+  
+</p>
+
 </code></pre>
 
 
