--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
 <p>
   
-<img src="harambechulonumerouno.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
+<img src="haramberip.jpg" alt="harambe2" style="width:304px;height:228px;">
   
 </p>
 
