--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ How to use microTaboo to find sequences in a FASTA file that occur only once</h3
 <p>
   
 <img src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
-<img src="haramberip.jpg" alt="harambe2" style="width:304px;height:228px;">
+<img src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
   
 </p>
 
