--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
 <p><a href="http://www.biomedcentral.com/1471-2105/15/227?utm_source=dlvr.it&amp;utm_medium=tumblr">Place link here</a></p>
 
-<p>citation here</p>
+<p>citation here
+<img src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
+</p>
 
 <hr>
 
@@ -66,6 +68,8 @@ How to use microTaboo to solve you k-mismatch problem</h3>
 1. Create a folder/directory, you can name this folder/directory whatever you want as long as you know where it is. For the sake of example, we call our folder/directory F.<br><br>
 
 2. Download the microTaboo.jar file from the website and place it in the folder F.<br><br>
+
+<img src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
 
 3. Create three new (sub) folders/directories inside our main folder F. For simplicity and consistency, we call these new folders A, B and R. <br><br>
 
@@ -130,7 +134,6 @@ How to use microTaboo to find sequences in a FASTA file that occur only once</h3
 <p>
   
 <img src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
-<img src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
   
 </p>
 
