--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 Mention also that microTaboo can also be  used to find sequences in a fasta file that only occur once. 
 Moreover if you want to find unique sequences that are not only occur once in your fasta file, but differ from any other sequence
 by a number of mismatches, then microTaboo should be your app of choice.</p>
-
+<img src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
 <hr>
 
 <h3>
@@ -98,6 +98,8 @@ on your machine, it also gives you some practice on microTaboo.
 <a id="how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
 How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
+
+<img src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
 
 <p>In this section, we'll show how microTaboo can be used to find all sequences of 
 length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
