--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ How to use microTaboo to find sequences in a FASTA file that occur only once</h3
 <p>
   
 <img src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
+<img src="haramberip.jpg" alt="harambe2" style="width:304px;height:228px;">
 <img src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
 <img src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
 <img src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
