--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ How to use microTaboo to find Harambe</h3>
 <img src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
 <img src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
 <img src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
-<img src="harambebush.png" alt="harambe6" style="width:304px;height:228px;">
+<img src="harambetarzan.png" alt="harambe6" style="width:304px;height:228px;">
 </p>
 
 </code></pre>
