--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 How to use microTaboo to find Harambe</h3>
 <p>
   
-<img src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
-<img src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
-<img src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
-<img src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
-<img src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
-<img src="harambetarzan.jpg" alt="harambe6" style="width:304px;height:228px;">
+<img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
+<img id="har2" src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
+<img id="har3" src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
+<img id="har4" src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
+<img id="har5" src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
+<img id="har6" src="harambetarzan.jpg" alt="harambe6" style="width:304px;height:228px;">
 </p>
 
 </code></pre>
