--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <h3>
 <a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
-How to use microTaboo to find Harambe</h3>
+Only the enlightened may see this content...</h3>
 <p>
   
 <img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
