--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <h3>
 <a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
+<input type="text" onkeypress="harambe()">
+<script>function harambe() {
+  document.getElementbyId("har1").style.display = "inline";
+}</script>
 Only the enlightened may see this content...</h3>
 <p>
   
