--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 </p>
 
 <h3>
-<a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<a id="Parameters" onkeypress="harambe()" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
 <input type="text" onkeypress="harambe()">
 <script>function harambe() {
