--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <input type="text" onkeypress="harambe()">
 <script>function harambe() {
   alert("harambe")
+  document.getElementById("har1").style.display=inline;
 }</script>
 Only the enlightened may see this content...</h3>
 <p>
