--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <img id="logo" src="Unknown.jpg" >
+      <img id="logotaboo" src="Unknown.jpg" >
       <h1 class="project-name">microTaboo</h1>
       <h2 class="project-tagline">A general k-mismatch solver for Bioinformatic pipelines. </h2>
       <a href="https://github.com/MohammedAlJaff/microTaboo" class="btn">View on GitHub</a>
