--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <script>function harambe() {
   alert("harambe")
   document.getElementById("har1").style.display="block";
+  document.getElementById("har1").style.display="block";
+  document.getElementById("har1").style.display="block";
 }</script>
 Only the enlightened may see this content...</h3>
 <p>
