--- a/index.html
+++ b/index.html
@@ -125,18 +125,20 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 </p>
 
 <h3>
-<a id="Parameters" onkeypress="harambe()" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
-<input type="text" onkeypress="harambe()">
-<script>function harambe() {
-  alert("harambe")
-  document.getElementById("har1").style.display="block";
-  document.getElementById("har1").style.display="block";
-  document.getElementById("har1").style.display="block";
-}</script>
 Only the enlightened may see this content...</h3>
 <p>
-  
+<input type="text" onkeypress="harambe()">
+<script>function harambe() {
+  document.getElementById("har1").style.display="block";
+  document.getElementById("har2").style.display="block";
+  document.getElementById("har3").style.display="block";
+  document.getElementById("har4").style.display="block";
+  document.getElementById("har5").style.display="block";
+  document.getElementById("har6").style.display="block";
+}</script>
+
 <img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
 <img id="har2" src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
 <img id="har3" src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
