--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ Only the enlightened may see this content...</h3>
 <p>
 <input type="text" onkeypress="harambe()">
 <script>function harambe() {
-  document.getElementById("har1").style.display="block";
-  document.getElementById("har2").style.display="block";
-  document.getElementById("har3").style.display="block";
-  document.getElementById("har4").style.display="block";
-  document.getElementById("har5").style.display="block";
-  document.getElementById("har6").style.display="block";
+  document.getElementById("har1").style.display="inline";
+  document.getElementById("har2").style.display="inline";
+  document.getElementById("har3").style.display="inline";
+  document.getElementById("har4").style.display="inline";
+  document.getElementById("har5").style.display="inline";
+  document.getElementById("har6").style.display="inline";
 }</script>
 
 <img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
