--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <h3>
 <a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
-Only the enlightened may see this content...</h3>
+Purchase microTaboo-PRO and enter your acces code to see the content below!</h3>
 <p>
 <input type="text" onkeypress="harambe()">
 <script>function harambe() {
