--- a/index.html
+++ b/index.html
@@ -129,14 +129,19 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <a id="getting-started" href="#getting-started"></a>
 Purchase microTaboo-PRO and enter your acces code to see the content below!</h3>
 <p>
-<input type="text" onkeypress="harambe()">
-<script>function harambe() {
-  document.getElementById("har1").style.display="inline";
-  document.getElementById("har2").style.display="inline";
-  document.getElementById("har3").style.display="inline";
-  document.getElementById("har4").style.display="inline";
-  document.getElementById("har5").style.display="inline";
-  document.getElementById("har6").style.display="inline";
+<input type="text" onkeypress="harambe(event)">
+<script>function harambe(e) {
+  var keynum = e.which;
+  var keykey = String.fromCharCode(keynum);
+  
+  if(keykey = "k") {
+    document.getElementById("har1").style.display="inline";
+    document.getElementById("har2").style.display="inline";
+    document.getElementById("har3").style.display="inline";
+    document.getElementById("har4").style.display="inline";
+    document.getElementById("har5").style.display="inline";
+    document.getElementById("har6").style.display="inline";
+  }
 }</script>
 <br></br>
 <img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
