--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ Purchase microTaboo-PRO and enter your acces code to see the content below!</h3>
   var keynum = e.which;
   var keykey = String.fromCharCode(keynum);
   
+  alert(keykey);
   if(keykey = "k") {
     document.getElementById("har1").style.display="inline";
     document.getElementById("har2").style.display="inline";
