--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Purchase microTaboo-PRO and enter your acces code to see the content below!</h3>
   var keykey = String.fromCharCode(keynum);
   
   alert(keykey);
-  if(keykey = "k") {
+  if(keykey == "k") {
     document.getElementById("har1").style.display="inline";
     document.getElementById("har2").style.display="inline";
     document.getElementById("har3").style.display="inline";
