--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
+  <body onkeypress="harambe(event)">
     <section class="page-header">
       <img id="logotaboo" src="Unknown.jpg" >
       <h1 class="project-name">microTaboo</h1>
