--- a/index.html
+++ b/index.html
@@ -129,13 +129,11 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 <a id="getting-started" href="#getting-started"></a>
 1999-2016...</h3>
 <p>
-<input type="text" onkeypress="harambe(event)">
 <script>function harambe(e) {
   var keynum = e.which;
   var keykey = String.fromCharCode(keynum);
   
-  alert(keykey);
-  if(keykey == "k") {
+  if(keykey == "h") {
     document.getElementById("har1").style.display="inline";
     document.getElementById("har2").style.display="inline";
     document.getElementById("har3").style.display="inline";
