--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ function harambe(e) {
   var keykey = String.fromCharCode(keynum);
   if(keykey==h) {
     h = true;
+    alert("h");
   }
   if(keykey==a) {
     a = true;
