--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@ var r = false;
 function harambe(e) {
   var keynum = e.which;
   var keykey = String.fromCharCode(keynum);
-  if(keykey==h) {
+  if(keykey== "h") {
     h = true;
     alert("h");
   }
-  if(keykey==a) {
+  if(keykey== "a") {
     a = true;
   }
-  if(keykey==r) {
+  if(keykey== "r") {
     r = true;
   }
   
