--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ function harambe(e) {
     e = true;
   }
   
-  if(h == true && a == true && r == true) {
+  if(h == true && a == true && r == true && m == true && b == true && e == true) {
     document.getElementById("har1").style.display="inline";
     document.getElementById("har2").style.display="inline";
     document.getElementById("har3").style.display="inline";
