--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ function harambe(e) {
   }
 }</script>
 <br></br>
-<img id="har1" src="harambechulonumerouno.jpg" alt="harambe1" style="width:304px;height:228px;">
-<img id="har2" src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
+<img id="har1" src="harambetheone.jpg" alt="harambe1" style="width:304px;height:228px;">
+<!--<img id="har2" src="haramberip.png" alt="harambe2" style="width:304px;height:228px;">
 <img id="har3" src="harambememe.png" alt="harambe3" style="width:304px;height:228px;">
 <img id="har4" src="harambecomrade.jpg" alt="harambe4" style="width:304px;height:228px;">
 <img id="har5" src="harambetrain.jpg" alt="harambe5" style="width:304px;height:228px;">
-<img id="har6" src="harambetarzan.jpg" alt="harambe6" style="width:304px;height:228px;">
+<img id="har6" src="harambetarzan.jpg" alt="harambe6" style="width:304px;height:228px;">-->
 </p>
 
 </code></pre>
