--- a/index.html
+++ b/index.html
@@ -118,8 +118,18 @@ Example:<br>
 java -Xmx6000m -jar path/microTaboo.jar path/A path/B path/R 20 2 d 5 m <br>
 Means finding all unique sequnces within 2 mismatches of length 20 bases while using 5 cores and allowing microTaboo to utilize a maximum of 6GB of RAM.
 
+<br><br>
 
-
+<h3>
+<a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<a id="getting-started" href="#getting-started"></a>
+Note on the presence of uncertain bases in a genome/FASTA-file.</h3>
+<p>
+When taking into account of unknown/uncertain bases (N), microTaboo follows the self-imposed convention that N compared to N gives 1 mismatch. 
+Because of this, sequences containing many unknown bases, ie many N’s, will have a high mismatch count when compared to any other sequence.
+In the extreme case where we have a W nt sequence of only Ns; when compared to itself, the number of mismatches will be W. 
+If a microTaboo run is initiated with a mismatch parameter k < W, these sequences will be included in either the disjoint set or unique set.
+</p>
 <br><br>
 
 </p>
