--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 
 <br><br>
 
-<h3>
-<a id="Parameters" class="anchor" href="#how-to-use-microtaboo-to-find-sequences-in-a-fasta-file-that-occur-only-once" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-<a id="getting-started" href="#getting-started" color="red"></a>
-Note on the presence of uncertain bases in a genome/FASTA-file.</h3>
+<h3 color="red"></h3>Note on the presence of uncertain bases in a genome/FASTA-file.</h3>
 <p>
 When taking into account of unknown/uncertain bases (N), microTaboo follows the self-imposed convention that N compared to N gives 1 mismatch. 
 Because of this, sequences containing many unknown bases, ie many N’s, will have a high mismatch count when compared to any other sequence.
