--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Means finding all unique sequnces within 2 mismatches of length 20 bases while u
 
 <br><br>
 
-<h4 color="red"></h3>Note on the presence of uncertain bases in a genome/FASTA-file.</h4>
+<font color="red"></h3>Note on the presence of uncertain bases in a genome/FASTA-file.</font>
 <p>
 When taking into account of unknown/uncertain bases (N), microTaboo follows the self-imposed convention that N compared to N gives 1 mismatch. 
 Because of this, sequences containing many unknown bases, ie many N’s, will have a high mismatch count when compared to any other sequence.
