--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ Example:<br>
 java -Xmx6000m -jar path/microTaboo.jar path/A path/B path/R 20 2 d 5 m <br>
 Means finding all unique sequnces within 2 mismatches of length 20 bases while using 5 cores and allowing microTaboo to utilize a maximum of 6GB of RAM.
 
-<br><br>
+<br><br><br>
 
-<font color="red"></h3>Note on the presence of uncertain bases in a genome/FASTA-file.</font>
+<font color="red">Note on the presence of uncertain bases in a genome/FASTA-file.</font>
 <p>
 When taking into account of unknown/uncertain bases (N), microTaboo follows the self-imposed convention that N compared to N gives 1 mismatch. 
 Because of this, sequences containing many unknown bases, ie many N’s, will have a high mismatch count when compared to any other sequence.
