--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ by a number of mismatches, then microTaboo should be your app of choice.</p>
 <a id="how-to-use-microtaboo-to-solve-you-k-mismatch-problem" class="anchor" href="#how-to-use-microtaboo-to-solve-you-k-mismatch-problem" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
 How to use microTaboo to solve you k-mismatch problem</h3>
-
+<br><br>
+<font color="red">Note: microTaboo requires Java SE Runtime Environment 7</font> <br><br>
 <p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
 
 1. Create a folder/directory, you can name this folder/directory whatever you want as long as you know where it is. For the sake of example, we call our folder/directory F.<br><br>
