--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>microTabooooo by MohammedAlJaff</title>
+    <title>microTaboo by MohammedAlJaff</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,10 +13,11 @@
     <section class="page-header">
       <img id="logotaboo" src="Unknown.jpg" >
       <h1 class="project-name">microTaboo</h1>
-      <h2 class="project-tagline">A general k-mismatch solver for Bioinformatic pipelines. </h2>
+      <h2 class="project-tagline">A general k-disjoint solver for Bioinformatic pipelines. </h2>
       <a href="https://github.com/MohammedAlJaff/microTaboo" class="btn">View on GitHub</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/zipball/Branch1" class="btn">Download .zip</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/tarball/Branch1" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/MohammedAlJaff/microTaboo/tarball/Branch2/ExampleRuns.zip" class="btn">Download .zip</a>
     </section>
 
     <section class="main-content">
@@ -40,8 +41,19 @@ by a number of mismatches, then microTaboo should be your app of choice.</p>
 <h3>
 <a id="key-concepts" class="anchor" href="#key-concepts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="dinmamma" href="#dinmamma"></a>Key concepts</h3>
-<p><em><strong>k-mismatch problem:</strong></em> Given two sets A and B containing sequences of length W, find all sequences X in A such that X is more than k mismatches away from any sequence Y in B. The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of A and B. The complement of the result is the <em><strong>k-intersection</strong></em> of A and B, i.e the set of sequences in A that are at most k mismatches away from something in B.</p>
+<p><em><strong>k-mismatch problem:</strong></em> 
 
+Given two sets A and B containing sequences of length W, find all sequences X in A such that X is more than k mismatches away from any sequence Y in B. The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of A and B. The complement of the result is the <em><strong>k-intersection</strong></em> of A and B, i.e the set of sequences in A that are at most k mismatches away from something in B.</p>
+
+Definition: The k-disjoint problem
+
+Given two fixed parameter values W and k aswell as two strings P and T where P has length n and T has length m, find all positions i (1=<i<=n) which have the property that a W length substring of P beginning at i is at least k edit distances away from any w long substring of T.
+
+ 
+
+Definition: The k-disjoint problem (Set -theoretic description)
+
+Let A and B be two sets containing sequences of length W. The k-disjoint of A and B is the set containing all sequences X in A such that X is at least k edit distances away from Y for all Y in B. Finding the k-disjoint of A and B is called the k-disjoint problem.
 <hr>
 
 <h3>
