--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
 <h3>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="overview" href="#overview"></a>Overview</h3>
-<p>  
+<p>
+A common challenge in bioinformatics is to identify unique sequences of a given size W, where uniqueness is defined as the absence of other sequences that differ by less than k mismatches. 
+Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions.  
+microTaboo is a tool that allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space.
+microTaboo runs on platforms: Windows, iOS and Linux with Java 7 or higher. 
+Additionally, for smaller tasks (prokaryotic genomes), microTaboo can be run on a laptop/desktop computer with 8 or more gigabytes of RAM.
+    
 Something something k-mismatch problem. 
 Mention also that microTaboo can also be  used to find sequences in a fasta file that only occur once. 
 Moreover if you want to find unique sequences that are not only occur once in your fasta file, but differ from any other sequence
