--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>
 A common challenge in bioinformatics is to identify unique sequences of a given size W, where uniqueness is defined as the absence of other sequences that differ by less than k mismatches. 
 Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions.  
-<br>microTaboo is a tool that solves these issues and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space.
+<br>microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space.
 microTaboo runs on platforms: Windows, iOS and Linux with Java 7 or higher. 
 Additionally, for smaller tasks (prokaryotic genomes), microTaboo can be run on a laptop/desktop computer with 8 or more gigabytes of RAM.
 <br><br>
