--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 A common challenge in bioinformatics is to identify unique sequences of a given size W, where uniqueness is defined as the absence of other sequences that differ by less than k mismatches. 
 Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions.  
 <br>microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space.
-microTaboo runs on platforms: Windows, iOS and Linux with Java 7 or higher. 
-Additionally, for smaller tasks (prokaryotic genomes), microTaboo can be run on a laptop/desktop computer with 8 or more gigabytes of RAM.
+microTaboo runs on platforms: Windows, Mac OS and Linux running Java 7 or higher. 
+Additionally, for smaller tasks (say FASTA files under 10mb), microTaboo can be run on a laptop/desktop computer with 8 or more gigabytes of RAM.
 <br><br>
 Something something k-mismatch problem. 
 Mention also that microTaboo can also be  used to find sequences in a fasta file that only occur once. 
@@ -47,17 +47,13 @@ by a number of mismatches, then microTaboo should be your app of choice.</p>
 <h3>
 <a id="key-concepts" class="anchor" href="#key-concepts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="dinmamma" href="#dinmamma"></a>Key concepts</h3>
-<p><em><strong>k-mismatch problem:</strong></em> 
+<p><em><strong>Definition: The k-disjoint problem :</strong></em> 
 
+(set-theoretic formulation)
 Given two sets A and B containing sequences of length W, find all sequences X in A such that X is more than k mismatches away from any sequence Y in B. The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of A and B. The complement of the result is the <em><strong>k-intersection</strong></em> of A and B, i.e the set of sequences in A that are at most k mismatches away from something in B.</p>
 
-Definition: The k-disjoint problem
-
-Given two fixed parameter values W and k aswell as two strings P and T where P has length n and T has length m, find all positions i (1=<i<=n) which have the property that a W length substring of P beginning at i is at least k edit distances away from any w long substring of T.
-
- 
-
-Definition: The k-disjoint problem (Set -theoretic description)
+("string & text" formulation)
+Given two fixed positive integer value parameters W and k aswell as two strings P and T where P has length n and T has length m, the k-disjoint problem consists of finding all positions i (1=<i<=n) which have the property that a W length substring of P beginning at i is at least k edit distances away from any W long substring of T.
 
 Let A and B be two sets containing sequences of length W. The k-disjoint of A and B is the set containing all sequences X in A such that X is at least k edit distances away from Y for all Y in B. Finding the k-disjoint of A and B is called the k-disjoint problem.
 <hr>
