--- a/index.html
+++ b/index.html
@@ -48,23 +48,17 @@ by a number of mismatches, then microTaboo should be your app of choice.</p>
 <a id="key-concepts" class="anchor" href="#key-concepts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="dinmamma" href="#dinmamma"></a>Key concepts</h3>
 <p><em><strong>Definition: The k-disjoint problem :</strong></em> 
-
-
+<br><br>
 (set-theoretic formulation)
-
-
+<br><br>
 Given two sets A and B containing sequences of length W, find all sequences X in A such that X is more than k mismatches away from any sequence Y in B. The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of A and B. The complement of the result is the <em><strong>k-intersection</strong></em> of A and B, i.e the set of sequences in A that are at most k mismatches away from something in B.</p>
-
-
+<br><br>
 alternativly
-
-
-Let A and B be two sets containing sequences of length W. The k-disjoint of A and B is the set containing all sequences X in A such that X is at least k edit distances away from Y for all Y in B. Finding the k-disjoint of A and B is called the k-disjoint problem.
-
+<br><br>
+Let A and B be two sets containing sequences of length W. The k-disjoint of A and B is the set containing all sequences X in A such that X is at least k edit distances away from Y for all Y in B. Finding the k-disjoint of A and B is called the k-disjoint problem.<br><br>
 ("string & text" formulation)
-
+<br><br>
 Given two fixed positive integer value parameters W and k aswell as two strings P and T where P has length n and T has length m, the k-disjoint problem consists of finding all positions i (1=<i<=n) which have the property that a W length substring of P beginning at i is at least k edit distances away from any W long substring of T.
-
 <hr>
 
 <h3>
