--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Finding the k-disjoint of A and B is called the k-disjoint problem.
 ("string & text" formulation)
 <br><br>
 Given two fixed positive integer value parameters W and k aswell as two strings P and T where P has length n and T has length m, 
-the k-disjoint problem consists of finding all positions i (1=<i<=n) which have the property that a W length substring of P 
+the k-disjoint problem consists of finding all positions i (0<i<n+1) which have the property that a W length substring of P 
 beginning at i is at least k edit distances away from any W long substring of T.
 <hr>
 </p>
