--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="overview" href="#overview"></a>Overview</h3>
 <p>
-A common challenge in bioinformatics is to identify unique sequences of a given size W, where uniqueness is defined as the absence of other sequences that differ by less than k mismatches. 
+A common challenge in bioinformatics is to identify unique sequences of a given size, where uniqueness is defined as the absence of other sequences that differ by some mismatch threshold. 
 Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions.  
 <br>microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space.
 microTaboo runs on platforms: Windows, Mac OS and Linux running Java 7 or higher. 
